# internal/application/dto/auth_dto.go
@@ -1,0 +1,10 @@
+package dto
+
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	AccessToken string `json:"access_token" example:"..."`
+}
